# visa_center_course_work

./: .gitignore  README.MD  pyproject.toml
apps/visa/: admin.py  models.py  serializer.py  urls.py  viewsets.py
apps/visa/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
